--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-  rel="stylesheet"
-  type="text/css"
-  href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800"
-/>
     <meta charset="utf-8" />
     <link
-  rel="apple-touch-icon"
-  sizes="180x180"
-  href="%PUBLIC_URL%/apple-touch-icon.png"
-/>
-<link
-  rel="icon"
-  type="image/png"
-  href="%PUBLIC_URL%/favicon-32x32.png"
-  sizes="32x32"
-/>
-<link
-  rel="icon"
-  type="image/png"
-  href="%PUBLIC_URL%/favicon-16x16.png"
-  sizes="16x16"
-/>
-<link
-  rel="mask-icon"
-  href="%PUBLIC_URL%/safari-pinned-tab.svg"
-  color="#5bbad5"
-/>
-<meta name="description" content="A simple note taking app" />
-<meta name="theme-color" content="#ffffff" />
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+      sizes="16x16"
+    />
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="description" content="A simple note taking app" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&family=PT+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -47,9 +46,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Scratch - A simple note taking app</title>  </head>
+    <title>Scratch - A simple note taking app</title>
+  </head>
   <body>
-    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
